# IRVS

./: Agent.sln  README.md  TECHNICAL.md  it-security-solution.sln  package.json  server.js
AVScanner/: AVScanner.csproj  Antivirus.cs
AgentCore/: Agent.cs  AgentCore.csproj  Program.cs  appsettings.json
AgentCore/IPC/: IPCFramework.cpp  IPCFramework.h
AgentCore/Models/: AgentConfig.cs
AgentCore/Services/: AgentBackgroundService.cs  ConnectionManager.cs  Scheduler.cs
PatchManager/: PatchManager.cs  PatchManager.csproj
RemoteDesktopIntegration/: Example.cs  RemoteDesktopManager.cs
RemoteDesktopServer/: CMakeLists.txt  RemoteDesktopServer.cpp  RemoteDesktopServer.h  RemoteDesktopServerExports.cpp  build.sh  main.cpp  version.h.in
RemoteShellServer/: Models.cs  RemoteShellConnection.cs  RemoteShellExecutor.cs  RemoteShellServer.csproj  RemoteShellService.cs  SecurityUtility.cs  SystemInfoProvider.cs
SystemMonitor/: SystemMonitor.cs
VulnScanner/: VulnScanner.cs  VulnScanner.csproj
central-server/api-server/: README.md  package.json
central-server/api-server/src/: index.cs  index.js
central-server/auth-service/: README.md  package.json
central-server/auth-service/src/: auth.js
central-server/command-dispatcher/: README.md  package.json
central-server/command-dispatcher/src/: dispatcher.js
central-server/dashboard-ui/: README.md  package.json
central-server/dashboard-ui/src/: App.jsx
central-server/log-audit-storage/: README.md
central-server/patch-management-orchestrator/: README.md  package.json
central-server/patch-management-orchestrator/src/: orchestrator.js
central-server/relay-server/: README.md  package.json
central-server/relay-server/src/: relay.js
central-server/scan-db-av-signatures/: README.md
database/postgres/: schema.sql
database/redis/: README.md
include/RemoteDesktopServer/: RemoteDesktopServer.h
include/RemoteShellServer/: RemoteShellServer.h
routes/: systems.js  vulnerabilities.js
